test/simple/ill-typed/inspect_poly_nested.caprice
(* TEST
  include refutable;
*)


let f (type a) (x : list a) : a =
  match x with
  | [] -> assume false
  | (y :: z) :: _ -> y :: z (* ERROR: inspecting `a` *)
  | hd :: _ -> hd
  end
